--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
 		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
 		"squizlabs/php_codesniffer": "^3.7.1",
 		"wp-coding-standards/wpcs": "^2.3.0",
-		"wptrt/wpthemereview": "^0.2.1"
+		"wptrt/wpthemereview": "^0.2.1",
+		"php-stubs/acf-pro-stubs": "^6.2",
+		"php-stubs/woocommerce-stubs": "^9.3",
+		"php-stubs/wordpress-stubs": "^6.6"
 	},
 	"config": {
 		"platform": {
