--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "block-theme",
+	"name": "upcycled-fse",
 	"version": "0.0.2",
 	"description": "A starter theme for modern WordPress developers.",
 	"author": "BlockTheme Contributors",
@@ -9,13 +9,13 @@
 		"starter",
 		"theme"
 	],
-	"homepage": "https://github.com/bacoords/block-theme#readme",
+	"homepage": "https://github.com/somteacodes/upcycled-fse#readme",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/bacoords/block-theme.git"
+		"url": "git+https://github.com/somteacodes/upcycled-fse.git"
 	},
 	"bugs": {
-		"url": "https://github.com/bacoords/block-theme/issues"
+		"url": "https://github.com/somteacodes/upcycled-fse/issues"
 	},
 	"main": "index.js",
 	"devDependencies": {
@@ -27,8 +27,8 @@
 	},
 	"scripts": {
 		"build": "wp-scripts build --config ./bin/webpack.config.js --webpack-src-dir=src/blocks",
-		"create-block": "cd ./src/blocks && npx @wordpress/create-block --namespace=block-theme --no-plugin",
-		"create-block:dynamic": "cd ./src/blocks && npx @wordpress/create-block --namespace=block-theme --no-plugin --variant=dynamic",
+		"create-block": "cd ./src/blocks && npx @wordpress/create-block --namespace=upcycled-fse --no-plugin",
+		"create-block:dynamic": "cd ./src/blocks && npx @wordpress/create-block --namespace=upcycled-fse --no-plugin --variant=dynamic",
 		"start": "wp-scripts start --config ./bin/webpack.config.js --webpack-src-dir=src/blocks"
 	},
 	"dependencies": {
