--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,17 +23,17 @@ jobs:
       uses: thedoctor0/zip-release@0.7.1
       with:
         type: 'zip'
-        filename: 'block-theme.zip'
+        filename: 'upcycled-fse.zip'
         exclusions: '*.git* /*node_modules/*'
 
     - name: Upload release artifact
       uses: actions/upload-artifact@v3
       with:
         name: release
-        path: block-theme.zip
+        path: upcycled-fse.zip
 
     - name: Upload Release
       uses: ncipollo/release-action@v1.12.0
       with:
-        artifacts: "block-theme.zip"
+        artifacts: "upcycled-fse.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
