--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@wordpress/icons": "^10.11.0",
+		"axios": "^1.7.9",
 		"browser-sync": "^3.0.3",
 		"clsx": "^2.1.1",
 		"react-hook-form": "^7.54.0",
